# 15-dbsync

./: daxo.py  main.py  pyproject.toml
apps/makedata/: __init__.py  process.py
apps/sync/: __init__.py
apps/synccli/: __init__.py  client.py
apps/syncsvc/: __init__.py  svc.py
common/logger/: logger.py
common/storage/: __init__.py
common/synccli/: __init__.py
common/syncsvr/: __init__.py
common/util/: __init__.py  dt.py  gracefulshutdown.py  misc.py  test.py  tool.py
config/: config.toml  meta.json
data/: data.db  data.db-shm  data.db-wal  dest.db  dst.db
database/: __init__.py  core.py  models.py
